smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-object6.smithy
// Parse error at line 4, column 1 near `string`: Expected: ':', but found 's'
namespace com.foo
@foo(bar: "baz", "bam"
string MyString
